--- a/app/web/index.html
+++ b/app/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div id="chat-app">
@@ -12,6 +12,6 @@
         <input type="text" id="message-input" placeholder="Type your message here..." autocomplete="off">
         <button id="send-button">Send</button>
     </div>
-    <script src="script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
